# pixel_engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/hello_game/: CMakeLists.txt  hello_game.cpp
examples/hello_game/resources/shaders/: mesh.frag  mesh.vert
include/pixel_engine/: game.h  program.h
pixel_engine/: CMakeLists.txt  camera.cpp  camera.h  collider_component.cpp  collider_component.h  color.cpp  color.h  component.cpp  component.h  convex_hull.cpp  convex_hull.h  directional_light.cpp  directional_light.h  eigen_typedefs.h  eigen_utilities.h  empty.cpp  empty.h  entity.cpp  entity.h  fps_controller.cpp  fps_controller.h  free_camera_component.cpp  free_camera_component.h  game.cpp  game.h  game_mode.cpp  game_mode.h  material.cpp  material.h  mesh.cpp  mesh.h  mesh_loader.cpp  mesh_loader.h  ogl_framebuffer.cpp  ogl_framebuffer.h  ogl_fxaa_renderer.cpp  ogl_fxaa_renderer.h  ogl_gamma_renderer.cpp  ogl_gamma_renderer.h  ogl_material.cpp  (+35 more)
pixel_engine/meshes/camera/: camera.mtl
pixel_engine/shaders/: deferred_lighting.frag  fxaa.comp  fxaa.frag  fxaa.vert  gamma.frag  grid.frag  grid.vert  mesh.frag  mesh.vert  mesh_deferred.frag  pose.frag  pose.vert  post.vert  shadow.frag  shadow.vert  skybox.frag  skybox.vert  ssao.frag  ssao_blur.frag  texture.frag  types.glsl
src/: CMakeLists.txt
